fix title overflow

--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -28,3 +28,9 @@
     height: 290px;
 	background-size: 100% 100%;
 }
+
+.highlights h2.entry-title {
+    max-height: 68px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
